# market-pulse

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py  shared.py
app/analytics/: main.py  processor.py  windows.py
app/config/: settings.py
app/consmer/: pipeline.py
app/core/: backoff.py  runner.py  service.py
app/ingestion/: binance_ws_client.py  consumer.py  main.py  pipeline.py  service.py  worker.py
app/normalizers/: binance_trade.py
app/pipelines/: pipeline.py
app/producers/: create_topics.py  kafka_producer.py
app/schema/: metric_event.py  trade_event.py
app/storage/: main.py  processor.py  queries.py  repository.py
app/streaming/: admin.py  bootstrap.py  kafka_consumer.py  topics.py
app/streams/: topics.py
app/validators/: trade_validator.py  validation_result.py
app/websocket/: consumer.py
docker/clickhouse/initdb/: 001-create-users.sql
observability/: logger.py
tests/config/: test_settings.py
tests/docker/: test_compose.py
tests/storage/: test_main.py  test_processor.py  test_repository.py
websocket/: consumer.py
